test/integration/unsolved_syntax_issues/no_program_args.pal
{2,5,7}
program test;
begin
	a := 1;
	2 = 1;			// error
end				// error
